<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:keepScreenOn="true">

    <ImageView
        android:id="@id/bkg_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"/>

    <com.burtonshead.burningeye.logic.GameSurface
        android:id="@id/game_surface"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        androidLscaleType="fitXY"/>

    <View
        android:id="@id/inner_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="30.0dip"/>

    <TextView
        android:id="@id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:text="0"
        android:textColor="#88ffffff"
        android:textSize="18.0sp"
        android:textStyle="bold"
        android:elevation="10dp"/>

    <LinearLayout
        android:id="@id/control_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:shadowColor="#ff000000"
            android:shadowRadius="10.0"
            android:text="@string/new_game"
            android:textColor="@drawable/text_button"
            android:textSize="48.0sp"
            android:textStyle="bold"
            android:visibility="visible"/>

        <TextView
            android:id="@id/resume_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20.0dip"
            android:shadowColor="#ff000000"
            android:shadowRadius="10.0"
            android:text="@string/resume"
            android:textColor="@drawable/text_button"
            android:textSize="48.0sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:id="@id/calibrate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20.0dip"
            android:shadowColor="#ff000000"
            android:shadowRadius="10.0"
            android:text="@string/calibrate"
            android:textColor="@drawable/text_button"
            android:textSize="32.0sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:id="@id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20.0dip"
            android:shadowColor="#ff000000"
            android:shadowRadius="10.0"
            android:text="@string/exit"
            android:textColor="@drawable/text_button"
            android:textSize="32.0sp"
            android:textStyle="bold"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@id/level_control_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@id/wave_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:shadowRadius="6.0"
            android:text="@string/wave_complete"
            android:textColor="#ffddeeff"
            android:textSize="36.0sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@id/wave_continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20.0dip"
            android:shadowColor="#ff000000"
            android:shadowRadius="6.0"
            android:text="@string/continue_game"
            android:textColor="@drawable/text_button"
            android:textSize="36.0sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@id/wave_exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20.0dip"
            android:shadowColor="#ff000000"
            android:shadowRadius="6.0"
            android:text="@string/exit"
            android:textColor="@drawable/text_button"
            android:textSize="36.0sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@id/powerup_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageButton
            android:id="@id/powerup_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:visibility="gone"/>

        <ImageButton
            android:id="@id/powerup_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:visibility="gone"/>

        <ImageButton
            android:id="@id/powerup_button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:visibility="gone"/>

        <ImageButton
            android:id="@id/powerup_button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:visibility="gone"/>
    </LinearLayout>
</RelativeLayout>