<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@id/top"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@id/bkg_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:id="@id/scroller"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@id/story_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="16.0dip"
                android:layout_marginLeft="100.0dip"
                android:layout_marginRight="100.0dip"
                android:layout_marginTop="50.0dip"
                android:lineSpacingMultiplier="1.2"
                android:shadowColor="#ff000000"
                android:shadowRadius="2.0"
                android:text="@string/story_1"
                android:textColor="@color/story_text"
                android:textSize="18.0dip"
                android:textStyle="bold"/>

            <TextView
                android:id="@id/story_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="16.0dip"
                android:layout_marginLeft="100.0dip"
                android:layout_marginRight="100.0dip"
                android:lineSpacingMultiplier="1.2"
                android:shadowColor="#ff000000"
                android:shadowRadius="2.0"
                android:text="@string/story_2"
                android:textColor="@color/story_text"
                android:textSize="18.0dip"
                android:textStyle="bold"/>

            <TextView
                android:id="@id/story_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="16.0dip"
                android:layout_marginLeft="100.0dip"
                android:layout_marginRight="100.0dip"
                android:lineSpacingMultiplier="1.2"
                android:shadowColor="#ff000000"
                android:shadowRadius="2.0"
                android:text="@string/story_3"
                android:textColor="@color/story_text"
                android:textSize="18.0dip"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@id/story_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8.0dip"
        android:text="MAIN"
        android:textColor="@drawable/text_button"
        android:textSize="36.0dip"
        android:textStyle="bold"/>
</RelativeLayout>